# Auppy

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  errors.rs  folders.rs  lib.rs  main.rs  models.rs  python.rs  runner.rs  safety.rs  settings.rs  workspaces.rs
src/features/command-center/: constants.ts  styles.ts  types.ts  useCommandCenter.ts  utils.ts
src/features/command-center/components/: AppHeader.tsx  CommandEditor.tsx  DetailsPanel.tsx  LibrarySidebar.tsx  SettingsDialog.tsx
src/lib/: tauri.ts
